28 - Изменил стиль поясняющих кнопок

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2323,7 +2323,7 @@ p.ital
 	margin-top 15px
 
 .pg5-fack-block
-	height 55px
+	height 62px
 	width 96%
 	//background #ebebeb
 	margin auto
@@ -2335,6 +2335,7 @@ p.ital
 		margin auto
 		height 90%
 		background #ffae0d
+		border dashed 2px black
 		border-radius: 10px
 		p
 			//bord()
@@ -2350,15 +2351,16 @@ p.ital
 			
 
 .pg5-req-butt:hover
-	filter: brightness(115%);
+	//filter: brightness(115%);
 	cursor: pointer;
+	border solid 2px black
 
 .pg5-req-butt
 	p:hover
 		cursor: pointer;
 
 .pg5-req-butt:active
-	filter: brightness(90%);
+	filter: brightness(80%);
 
 .pg5-start-button-2
 	margin-top 0px
@@ -2374,6 +2376,15 @@ p.ital
 		margin 10px auto
 	.gr
 		margin-bottom 30px
+
+
+
+
+
+
+
+
+
 
 
 
