29 - Закончил верстать 5ю страницу

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -153,8 +153,8 @@ html
         .pg5-block
           span Reset
       .pg5-start-button
-        span Подобрать
-      p.pg5-add-p-1 Выберете значение хотя бы в одном поле
+        span Подобрать набор растений
+      p.pg5-add-p-1 <i>Выберете значение хотя бы в одном поле</i>
     .pg5-block-vew-pl-list.pg5-block-2
       p.pg5-p1 Вот такие растения мы подобрали для вас:
       .pg5-lvl2-cont-1
@@ -217,7 +217,20 @@ html
       .pg5-start-button.pg5-start-button-2
         span Попробовать ещё раз
 
-    .h200
+    .pg5-block-vew-pl-list.pg5-block-2.pg5-block-4
+      p.pg5-p1 Модуль объяснения результата:
+      .pg5-block-4-name-of-palnt
+        span Растение с названием: 
+        span.pg-5-el-2 Кофейное дерево (кофе) 
+      p Попало в набор, потому что имеет характеристики:
+      .pg5-div-text-descr-charact
+        p Если это сообщение появляется слишком часто, укажите значения для 1-2 характеристик, не больше. И помните, чем больше цветов растения вы выберете - тем больше будет результатов.
+      p А запрос на выборку растений по заданным характеристикам, выглядел следующим образом:
+      .pg5-div-text-descr-charact
+        p Если это сообщение появляется слишком часто, укажите значения для 1-2 характеристик, не больше. И помните, чем больше цветов растения вы выберете - тем больше будет результатов.
+      p Из этого видно, что по значениям характеристик, растение попадает под заданную выборку, которую ввёл ползователь.
+
+    .h20
     .butt_back.n_but
       p Назад
 
