--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2379,7 +2379,29 @@ p.ital
 
 
 
+// ------
 
+.pg5-block-4
+	padding 20px 45px
+
+.pg5-block-4-name-of-palnt
+	span
+		font-size: 19px
+	margin-bottom 30px
+
+// .pg5-block-4-name-of-palnt
+// 	display: grid
+// 	grid-template-columns: 1fr 1fr
+// 	.pg-5-el-2
+// 		//text-align: right
+
+.pg5-div-text-descr-charact
+	overflow: auto
+	height 100px
+	background #e4e4e4
+	border-radius: 8px
+	margin 8px
+	margin-bottom 20px
 
 
 
