30 - Поправил кнопочки на главной странице

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -18,7 +18,7 @@ html
     .add-1
     .n_but.n_but_2 
       p Решатель задач
-    .n_but 
+    .n_but.n_but_3
       p Редактор знаний
     .remark   
       p <b>Примечание:</b>
