--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2098,9 +2098,9 @@ body.pg-4, body.pg-5
 		padding-left 10px
 	input[type="range"]
 		margin-right 10px
-		opacity: 0.4  		/// !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+		opacity: 0.3  		/// !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 	input[type="range"]::-webkit-slider-thumb 
-		opacity: 0;
+		//opacity: 0;
 	// input[type="range"]:focus
 	// 	//pointer-events: auto
 	// 	opacity: 1
