34 - Галочки у чекбоксов успешно снимаются

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -31,13 +31,13 @@ html
         span.lab-pg5 Переносимость прямого света
         .pg5-input-cont.pg5-input-cont-pointers
           .input-point-container
-            input(type="radio" name="first-light" id="1")
+            input(type="radio" name="first-light" id="1")#pg5-el-2
             span Да
           .input-point-container
-            input(type="radio" name="first-light" id="2")
+            input(type="radio" name="first-light" id="2")#pg5-el-2
             span Средне
           .input-point-container
-            input(type="radio" name="first-light" id="3")
+            input(type="radio" name="first-light" id="3")#pg5-el-2
             span Нет
         .pg5-block
           span Reset
