35 - Сделал все кнопки с чекбоксами

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -30,14 +30,14 @@ html
       .pg5-div-triple-rows#pg5-el-2
         span.lab-pg5 Переносимость прямого света
         .pg5-input-cont.pg5-input-cont-pointers
-          .input-point-container
-            input(type="radio" name="first-light" id="1")#pg5-el-2
+          .input-point-container#pg5-el-input-ch-1
+            input(type="radio" name="first-light" id="1")
             span Да
-          .input-point-container
-            input(type="radio" name="first-light" id="2")#pg5-el-2
+          .input-point-container#pg5-el-input-ch-2
+            input(type="radio" name="first-light" id="2")
             span Средне
-          .input-point-container
-            input(type="radio" name="first-light" id="3")#pg5-el-2
+          .input-point-container#pg5-el-input-ch-3
+            input(type="radio" name="first-light" id="3")
             span Нет
         .pg5-block
           span Reset
@@ -66,10 +66,10 @@ html
       .pg5-div-triple-rows#pg5-el-5
         span.lab-pg5 Тип растения
         .pg5-input-cont.pg5-input-cont-pointers.pg5-cont-2
-          .input-point-container
+          .input-point-container#pg5-el-input-ch-4
             input(type="radio" name="plant-type" id="1")
             span Домашнее
-          .input-point-container
+          .input-point-container#pg5-el-input-ch-5
             input(type="radio" name="plant-type" id="2")
             span Уличное
         .pg5-block
@@ -77,10 +77,10 @@ html
       .pg5-div-triple-rows#pg5-el-6
         span.lab-pg5 Плодоносное?
         .pg5-input-cont.pg5-input-cont-pointers.pg5-cont-2
-          .input-point-container
+          .input-point-container#pg5-el-input-ch-6
             input(type="radio" name="is-plod" id="1")
             span Да
-          .input-point-container
+          .input-point-container#pg5-el-input-ch-7
             input(type="radio" name="is-plod" id="2")
             span Нет
         .pg5-block
@@ -144,10 +144,10 @@ html
       .pg5-div-triple-rows#pg5-el-11
         span.lab-pg5 Известное растение?
         .pg5-input-cont.pg5-input-cont-pointers.pg5-cont-2
-          .input-point-container
+          .input-point-container#pg5-el-input-ch-8
             input(type="radio" name="is-raritet" id="1")
             span Да
-          .input-point-container
+          .input-point-container#pg5-el-input-ch-9
             input(type="radio" name="is-raritet" id="2")
             span Нет
         .pg5-block
