--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -55,9 +55,9 @@ html
       .pg5-div-triple-rows#pg5-el-4
         span.lab-pg5 Температура
         .pg5-input-cont
-          input(type="range" min="1" max="10" value="0")
+          input(type="range" min="1" max="35" value="0")
           .pg5-input-hints
-            span.pg5-lvl2-input-left-hint -20 ℃
+            span.pg5-lvl2-input-left-hint 0 ℃
             span.pg5-lvl2-input-right-hint 35 ℃
         .pg5-block
           span Reset
@@ -154,7 +154,7 @@ html
           span Reset
       .pg5-start-button
         span Подобрать набор растений
-      p.pg5-add-p-1 <i>Выберете значение хотя бы в одном поле</i>
+      p.pg5-add-p-1#pg5-el-6 <i>Выберете значение хотя бы в одном поле</i>
     .pg5-block-vew-pl-list.pg5-block-2
       p.pg5-p1 Вот такие растения мы подобрали для вас:
       .pg5-lvl2-cont-1
@@ -232,7 +232,7 @@ html
 
     .h20
     .butt_back.n_but
-      p Назад
+      p Назад, в главное меню
 
   footer 
     .version 
