--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -211,7 +211,7 @@ html
       .pg5-p4-block
         p В данном наборе <b>все</b> растения удовлетворяют критериям совместимости, а именно - один тип климата, и положительная либо нейтральная аллелопатия.
         p Для того, что бы узнать, согласно каким именно характеристикам, в набор было помещено конкретное растение - <u>нажмите на кнопку пояснения</u>, ниже карточки растения.
-      .pg5-start-button.pg5-start-button-2
+      .pg5-start-button.pg5-start-button-2#butt-restart
         span Пройти ещё раз
 
 
@@ -220,14 +220,15 @@ html
       p К сожалению, мы не смогли подобрать для вас набор растений, по указанным вами характеристикам.
       p Пожалуйста, попробуйте ещё раз - выберете другие характеристики.
       p.gr Если это сообщение появляется слишком часто, укажите значения для 1-2 характеристик, не больше. И помните, чем больше цветов растения вы выберете - тем больше будет результатов.
-      .pg5-start-button.pg5-start-button-2
+      .pg5-start-button.pg5-start-button-2#butt-restart
         span Попробовать ещё раз
 
     .pg5-block-vew-pl-list.pg5-block-2.pg5-block-4#expl-block
       p.pg5-p1 Модуль объяснения результата:
       .pg5-block-4-name-of-palnt
         span Растение с названием: 
-        span.pg-5-el-2 Кофейное дерево (кофе) 
+        span 🪴
+        span.pg-5-el-2#plant-name-expl-module <b>Название растения</b>
       p Попало в набор, потому что имеет характеристики:
       .pg5-div-text-descr-charact
         p Если это сообщение появляется слишком часто, укажите значения для 1-2 характеристик, не больше. И помните, чем больше цветов растения вы выберете - тем больше будет результатов.
