43 - Улучшил стили на главной странице

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -14,17 +14,18 @@ html
       
       .head-bottom-line
 
-  body 
-    .add-1
-    .n_but.n_but_2 
-      p Решатель задач
-    .n_but.n_but_3
-      p Редактор знаний
-    .remark   
-      p <b>Примечание:</b>
-      p <u>База знаний</u> отображается в <i>Редакторе знаний</i>. Там-же реализован функционал <u>редактора знаний</u> 
-      p <u>Система ввода исходных данных</u>, интегрирована в <i>Решатель задач</i>
-      p <u>Система объяснения и вывода результата</u> будет отображена, после того, как пользователь введёт необходимые входные данные, в <i>Решателе задач</i>
+  body
+    .main-page
+      .add-1
+      .n_but.n_but_2
+        p Решатель задач
+      .n_but.n_but_3
+        p Редактор знаний
+      .remark   
+        p <b>Примечание:</b>
+        p <u>База знаний</u> отображается в <i>Редакторе знаний</i>. Там-же реализован функционал <u>редактора знаний</u> 
+        p <u>Система ввода исходных данных</u>, интегрирована в <i>Решатель задач</i>
+        p <u>Система объяснения и вывода результата</u> будет отображена, после того, как пользователь введёт необходимые входные данные, в <i>Решателе задач</i>
 
 
 
