--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1735,38 +1735,62 @@ body
 	width: 1px
 	height 35px
 
+.main-page
+	display: grid
+	justify-items: center;
+	align-items: center;
+
+
+
 .n_but
 	width 70%
 	height 75px
 	border-radius: 14px
-	border 4px solid bg-blue
 	padding 20px
 	margin 15px
 	background-color: bg-blue
 	font-weight: bold 	// Жирный
-	//font-style: italic 	// Курсив
 	font-size 18px
+	box-shadow: 0px 0px 10px 2px rgba(0, 149, 255, 0.471)	
 	p
 		text-align: center;
-		line-height: 5px
+		line-height: 12px
 		font-size: larger
-		
-.n_but:hover
-	//background-color: red	
-	border 3px solid black
-
-.n_but:active
-	filter: brightness(80%);
-
+	
 .n_but_2
-	border 4px solid orange
+	//border 4px solid orange
 	background-color: orange
+	box-shadow: 0px 0px 10px 2px rgba(255, 170, 0, 0.604)	
 
 .remark
 	margin-top 70px
 	width 70%
 	color rgb(151, 151, 151)
-	
+
+
+.n_but:hover
+	//filter: brightness(115%);
+	cursor: pointer;
+	box-shadow: 0px 0px 10px 2px rgb(0, 149, 255)	
+	p:hover
+		cursor: pointer;
+
+.n_but_2:hover
+	box-shadow: 0px 0px 10px 2px rgb(255, 170, 0)	
+
+.n_but:active
+	filter: brightness(95%);
+	box-shadow: 0px 0px 50px 10px rgb(0, 149, 255)	
+
+.n_but_2:active
+	box-shadow: 0px 0px 50px 10px rgb(255, 170, 0)	
+
+
+
+
+
+
+
 
 
 // ----------------
@@ -2409,39 +2433,14 @@ p.ital
 
 
 
+// Широкие экраны (десктоп)
+// Для 5й странице чуть-чуть по уже
+@media (min-width: 978px) 
+	.pg5-block-vew-pl-list
+		width: 880px
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+// -----------------------------------------------------------------------
 
 
 
@@ -2449,6 +2448,33 @@ p.ital
 
 // Широкие экраны (десктоп)
 // Для 5й странице чуть-чуть по уже
-@media (min-width: 978px) 
-	.pg5-block-vew-pl-list
-		width: 880px
+@media (min-width: 1055px) 
+	.main-page
+		width: 950px
+		display: grid
+		justify-items: center;
+		align-items: center;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
