44 - Изменил шрифт и стиль заголовков на 4 и 5 страницах

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -15,7 +15,9 @@ html
       .head-bottom-line
 
   body.pg-5
-    p.pg4-p1 Решатель задач
+    .pg5-title-block
+      img(src="img/bg-pg5.png").bg-pg5
+      p.pg4-p1 Решатель задач
     .pg5-block-vew-pl-list#main-block-input-charact
       p Выберете и задайте значения, для одной или нескольких характерисик, и решатель подберёт набор растений на их основе:
       .pg5-div-triple-rows#pg5-el-1
