--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2430,6 +2430,80 @@ p.ital
 #plant-name-expl-module
 	font-weight: bold
 
+.pg5-title-block
+	position: relative;
+
+.bg-pg5
+	width 40px
+ 	position: absolute;
+ 	top: 100px;
+	box-shadow none
+
+.pg5-title-block {
+    position: relative;
+}
+
+.bg-pg5 {
+    position: absolute;
+    z-index: -1;
+	top: 5px;
+	width 800px
+	height 130px
+	left: -130px
+	// top: -95px;
+	// width 1000px
+	// height 335px
+	// left: -245px
+	// top: -86px;
+	// width 500px
+	// height 280px
+	// left: -130px
+}
+
+.pg4-p1 {
+    position: relative;
+    z-index: 1;
+}
+
+
+p.pg4-p1
+	margin-top 30px
+	margin-bottom 30px
+	font-size: 50px
+
+
+.pg-5
+	.n_but
+		box-shadow none
+
+.pg-4
+	.n_but
+		box-shadow none
+
+
+@font-face {
+    font-family: 'Klukva';
+    src: url('fonts/mr_FloraG.ttf') format('opentype');
+}
+
+.pg4-p1 {
+    font-family: 'Klukva';
+	//font-size: 40px
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
