--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -2,11 +2,11 @@ html
   head
     include headCode
     title Редактор знаний
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js") 
 
     //script(src="js/mainTerminal.js")
     // Возможно потом заменить на другой скрипт
-    script(src="js/new/script_5.js") 
+    script(src="js/new/script_4.js" defer) 
     
     header.header
       .bg-fone-header
