--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2066,6 +2066,38 @@ p.p-4-1
 	border solid black 4px
 
 
+#key-haract-button
+	margin-top 0px
+	background #e3fc00
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 // Широкие экраны (десктоп)
 @media (min-width: 1055px) 
