49 - Получаю и проставляю характеристики в жёлтый блок

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -54,8 +54,8 @@ html
       .cont-dooble-4-3#param-4
         span Переносимость прямого света:
         select#select-light
-          option(value="yes", selected) Да
-          option(value="no") Нет
+          option(value="yes") Да
+          option(value="no", selected) Нет
           option(value="medium") Средне
         span.add-4-4 select
       .cont-dooble-4-3#param-5
