56 - Добавил выделение и переходы по записям

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -28,13 +28,13 @@ html
           .el-pl-cont-4 блок 4
           .el-pl-cont-4 блок 5
         .right-container 
-          .butt-4-1 
+          .butt-4-1#butt-go-top
             span К первой записи
-          .butt-4-1 
-            span Следующая запись
-          .butt-4-1 
-            span Предыдущая запись
-          .butt-4-1 
+          //- .butt-4-1#butt-go-last
+          //-   span Следующая запись
+          //- .butt-4-1#butt-go-first
+          //-   span Предыдущая запись
+          .butt-4-1#butt-go-bottom
             span К последней записи
       p.p-4-1 Выберете одно растение из списка, и вы сможете просмотреть все его характеристики, и отредактировать их.
     .block-vew-pl-list.p-4-3-add#yell-block
