--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1836,7 +1836,7 @@ body
 .main-pl-list-cont-pg4
 	//bord()
 	width 90%
-	height 200px
+	height 400px
 	margin 15px
 	overflow-y: auto;
 	background-color: bg-blue
@@ -2070,7 +2070,8 @@ p.p-4-1
 	margin-top 0px
 	background #e3fc00
 
-
+.el-blue-button-selected
+	border solid 3px black
 
 
 
