--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2113,7 +2113,17 @@ body.pg-4, body.pg-5
 		overflow-x: visible
 
 
+@media (min-width: 1450px) 
+	//.block-vew-pl-list#block-vew-pl-list-first
+	.upper-block
+		width: 90%
+		display: grid
+		grid-template-columns: 1fr 1fr
+		.block-vew-pl-list#block-vew-pl-list-first
+			bord()
 
+	p
+		//color red
 
 
 
