58 - Перестроил интерфейс под широкие экраны

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -5,8 +5,7 @@ html
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js") 
 
     //script(src="js/mainTerminal.js")
-    // Возможно потом заменить на другой скрипт
-    //script(src="js/new/script_4.js" defer) 
+    script(src="js/new/script_4.js" defer) 
     
     header.header
       .bg-fone-header
