59 - Добавил отклик, при показе характеристик другой записи

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2156,7 +2156,11 @@ body.pg-4, body.pg-5
 		//color red
 
 
-
+// #yell-block 
+// 	.cont-dooble-4-3
+// 		input, select
+// 			background-color: red !important;
+// 			color lightgray
 
 
 
