60 - Перед первым показом

--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -175,18 +175,6 @@ html
             .pg5-lvl4-block1-img
               img(src="img/all-plants-photo/Растение Агапантус.jpg")
             .pg5-lvl44-name-pl-2
-              p.pg5-lvl4-name-pl Кофейное дерево (кофе)
-          .pg5-lvl3-block3
-            p <b>Аллелопатия:</b>
-            p.ital Нейтральная
-        .pg5-lvl2-block
-          .pg5-lvl3-block1
-            p <b>Тип климата:</b>
-            p.ital Субтропический
-          .pg5-lvl3-block2
-            .pg5-lvl4-block1-img
-              img(src="img/all-plants-photo/Растение Агапантус.jpg")
-            .pg5-lvl44-name-pl-2
               p.pg5-lvl4-name-pl Лаванда
           .pg5-lvl3-block3
             p <b>Аллелопатия:</b>
@@ -197,9 +185,21 @@ html
             p.ital Субтропический
           .pg5-lvl3-block2
             .pg5-lvl4-block1-img
-              img(src="img/all-plants-photo/Растение Агапантус.jpg")
+              img(src="img/all-plants-photo/Растение Броваллия.jpg")
             .pg5-lvl44-name-pl-2
-              p.pg5-lvl4-name-pl Лимон
+              p.pg5-lvl4-name-pl Броваллия
+          .pg5-lvl3-block3
+            p <b>Аллелопатия:</b>
+            p.ital Нейтральная
+        .pg5-lvl2-block
+          .pg5-lvl3-block1
+            p <b>Тип климата:</b>
+            p.ital Субтропический
+          .pg5-lvl3-block2
+            .pg5-lvl4-block1-img
+              img(src="img/all-plants-photo/Растение Бугенвилия.jpg")
+            .pg5-lvl44-name-pl-2
+              p.pg5-lvl4-name-pl Бугенвилия
           .pg5-lvl3-block3
             p <b>Аллелопатия:</b>
             p.ital Нейтральная
@@ -233,10 +233,10 @@ html
         span.pg-5-el-2#plant-name-expl-module <b>Название растения</b>
       p Попало в набор, потому что имеет характеристики:
       .pg5-div-text-descr-charact
-        p Если это сообщение появляется слишком часто, укажите значения для 1-2 характеристик, не больше. И помните, чем больше цветов растения вы выберете - тем больше будет результатов.
+        p Темпераура >20, Влажность <40, Освещение >30 < 40 ...
       p А запрос на выборку растений по заданным характеристикам, выглядел следующим образом:
       .pg5-div-text-descr-charact
-        p Если это сообщение появляется слишком часто, укажите значения для 1-2 характеристик, не больше. И помните, чем больше цветов растения вы выберете - тем больше будет результатов.
+        p Температура 22 Влажность 10
       p Из этого видно, что по значениям характеристик, растение попадает под заданную выборку, которую ввёл ползователь.
 
     .h20
