61 - Пытаюсь написать функционал добавления записей в таблицу

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -172,7 +172,7 @@ html
           .n-4-4-div-2#cl-type
             p.nt-4-4-1 Добавить новый признак:
             input(type="text", placeholder="Введите название признака")
-            .butt-add-new-pr.cl-type
+            .butt-add-new-pr.cl-type#cl-type-butt-add
               p Добавить
       .add-4-4-n
         p.n-4-4-1-n Цвет: 
@@ -201,7 +201,7 @@ html
           .n-4-4-div-2
             p.nt-4-4-1 Добавить новый признак:
             input(type="text", placeholder="Введите название признака")
-            .butt-add-new-pr#allelop-butt-add-1
+            .butt-add-new-pr#allelop-butt-add-1#color-butt-add
               p Добавить
 
 
