62 - Добавил обработчик ошибок ответов от сервера, и вывод пояснений в консоль

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -201,7 +201,7 @@ html
           .n-4-4-div-2
             p.nt-4-4-1 Добавить новый признак:
             input(type="text", placeholder="Введите название признака")
-            .butt-add-new-pr#allelop-butt-add-1#color-butt-add
+            .butt-add-new-pr#allelop-butt-add-1.color-butt-add
               p Добавить
 
 
