65 - Добавление признаков Аллелопатии успешно, также проверяется пустое поле

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -153,6 +153,7 @@ html
           .n-4-4-div-2#allelop
             p.nt-4-4-1 Добавить новый признак:
             input(type="text", placeholder="Введите название признака")
+            p.nt-4-4-1.err-4-4-2 Название не должно быть пустым!
             .butt-add-new-pr#allelop-butt-add
               p Добавить
       .add-4-4-n
@@ -172,6 +173,7 @@ html
           .n-4-4-div-2#cl-type
             p.nt-4-4-1 Добавить новый признак:
             input(type="text", placeholder="Введите название признака")
+            p.nt-4-4-1.err-4-4-2 Название не должно быть пустым!
             .butt-add-new-pr.cl-type#cl-type-butt-add
               p Добавить
       .add-4-4-n
@@ -198,9 +200,10 @@ html
                 td Элемент 2
               tr
                 td ЭлементЭлементЭлемент 3
-          .n-4-4-div-2
+          .n-4-4-div-2#color-type
             p.nt-4-4-1 Добавить новый признак:
             input(type="text", placeholder="Введите название признака")
+            p.nt-4-4-1.err-4-4-2 Название не должно быть пустым!
             .butt-add-new-pr#allelop-butt-add-1.color-butt-add
               p Добавить
 
