--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2163,6 +2163,11 @@ body.pg-4, body.pg-5
 // 			color lightgray
 
 
+.err-4-4-2
+	color rgb(204, 0, 0)
+	font-weight: bold
+	margin-top 10px
+
 
 
 // ------------------------------------------------------------------- //
