68 - Добавил окно загрузки, пока ждём ответа от БД, и изменение курсора на ожидание и обратно

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -15,6 +15,10 @@ html
       .head-bottom-line
 
   body.pg-4
+    .loader
+      img(src="img/wave-load.gif")
+      p Получение информации с сервера...
+  
     p.pg4-p1 Редактор базы знаний
     .upper-block
       .block-vew-pl-list#block-vew-pl-list-first
