69 - Начинаю делать обработку нажатия кнопки на создание новой записи о растении

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -131,7 +131,7 @@ html
           .butt-4-close#b-4-witch-not-save
             p Закрыть без изменений
 
-    .block-vew-pl-list.p-4-2-add
+    .block-vew-pl-list.p-4-2-add#add-new-plant-val
       p + Создать новую запись о растении
 
     .block-vew-pl-list.p-4-2-add#key-haract-button
