--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2182,7 +2182,7 @@ body.pg-4, body.pg-5
 	align-items: center
 	justify-content: center
 	z-index: 9999
-
+	display: none
 	img
 		// width: 50px
 		// height: 50px
