70 - Работаю над обработкой корректности значений в полях ввода новой записи о растении

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2204,6 +2204,35 @@ body.pg-4, body.pg-5
 
 
 
+#save-new-value 
+	background #23ff0f
+	border none
+
+#save-new-value:active
+	filter: brightness(85%);
+
+
+
+
+#yell-bl-error-add
+	color red
+	font-weight: bold
+	font-size: 22px
+	margin-bottom -10px
+	display: none
+
+
+
+.error-inpur-value
+	background red
+
+
+
+
+
+
+
+
 
 // ------------------------------------------------------------------- //
 //						 											   //
