--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -123,8 +123,11 @@ html
             option(value="yes", selected) Да
             option(value="no") Нет
           span.add-4-4 select
+        p#yell-bl-error-add Сначала заполните все поля корректно
         .butt-4-close#b-4-not-edit 
           p Свернуть
+        .butt-4-close#save-new-value 
+          p Сохранить
         .butt-compl-4
           .butt-4-close#b-4-witch-save
             p Сохранить изменения 
