76 - Закончил добавление новой записи о растении

--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -42,7 +42,8 @@ html
               span К последней записи
         p.p-4-1 Выберете одно растение из списка, и вы сможете просмотреть все его характеристики, и отредактировать их.
       .block-vew-pl-list.p-4-3-add#yell-block
-        p Все характеристики этой записи о растении:
+        p.hatters Все характеристики этой записи о растении:
+        p.cucsessMessage Запись успешно добавлена!
         .cont-dooble-4-3#param-1
           span Название растения:
           input(type="text")
