--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -2227,6 +2227,17 @@ body.pg-4, body.pg-5
 	background red
 
 
+.cucsessMessage
+	color rgb(0, 188, 0)
+	font-weight: bold
+	margin-top -20px
+	display none
+
+
+.hatters
+	margin-bottom 30px
+
+
 
 
 
