--- a/app/pug/page_4_editor_learn.pug
+++ b/app/pug/page_4_editor_learn.pug
@@ -224,6 +224,7 @@ html
 
   footer 
     .version 
-      p 2.0
-    p 
-      a(href = 'page_2.html') О проекте
+      p 2.0 Final - Апр 2024
+    //- p 
+    //-   a(href = 'page_2.html') О проекте
+    p.add-footer Нашли ошибку? Присылайте скриншот сюда: gog.ortey@yandex.ru
