--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -31,6 +31,6 @@ html
 
   footer 
     .version 
-      p 2.0.01
+      p 2.0 Final - Апр 2024
     p 
-      a(href = 'page_2.html') О проекте
+      a(href = 'https://vk.com/gog.ortey') Автор проекта - Gogik Ortey
