--- a/app/pug/page_5_todo_task.pug
+++ b/app/pug/page_5_todo_task.pug
@@ -17,7 +17,7 @@ html
   body.pg-5
     .pg5-title-block
       img(src="img/bg-pg5.png").bg-pg5
-      p.pg4-p1 Решатель задач
+      p.pg4-p1 РешателЬ задАч
     .pg5-block-vew-pl-list#main-block-input-charact
       p Выберете и задайте значения, для одной или нескольких характерисик, и решатель подберёт набор растений на их основе:
       .pg5-div-triple-rows#pg5-el-1
